2001-08-10  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-open.c (add_to_global): Remove stale comment.

	* elf/dl-load.c (fillin_rpath): In SUID binaries, don't mark
	non-system-dirs in LD_LIBRARY_PATH as nonexisting, simply drop them.

	* libio/iovdprintf.c (_IO_vdprintf): Set _IO_USER_LOCK flag for
	temporary stream.  Don't define lock.
	* libio/obprintf.c (_IO_obstack_vprintf): Likewise.
	* libio/strops.c (_IO_str_init_static): Likewise.
	* libio/vasprintf.c (_IO_vasprintf): Likewise.
	* libio/wstrops.c (_IO_wstr_init_static): Likewise.
	* libio/iovsprintf.c: Likewise.
	* libio/iovsnprintf.c: Likewise.
	* libio/iovswprintf.c: Likewise.
	* libio/iovsscanf.c: Likewise.
	* libio/iovswscanf.c: Likewise.
	* stdio-common/vfprintf.c [USE_IN_LIBIO] (buffered_vfprintf): Likewise.
	* libio/genops.c (_IO_no_init): Don't call _IO_lock_init if _lock
	is NULL.
	(_IO_default_finish): Likewise.
	* libio/wgenops.c (_IO_wdefault_finish): Likewise.

2001-08-10  Andreas Jaeger  <aj@suse.de>

	* stdio-common/stdio_ext.h: Fix typo.

2001-08-09  Ulrich Drepper  <drepper@redhat.com>

	* posix/fnmatch_loop.c: Fix computation of alignment.

2001-08-09  Isamu Hasegawa  <isamu@yamato.ibm.com>

	* posix/regex.c (wcs_regex_compile): Use appropriate string
	to compare with collating element.
	Fix the padding for the alignment.

2001-08-09  Isamu Hasegawa  <isamu@yamato.ibm.com>

	* locale/programs/ld-collate.c (collate_output): Exclude
	characters from elem_table.
	Reduce if clause to write collating elements correctly.
	* posix/Makefile (tests): Add bug-regex5.
	* posix/bug-regex5.c: New file.

2001-08-09  Ulrich Drepper  <drepper@redhat.com>

	* locale/lc-time.c (_nl_parse_alt_digit): New function.
	* locale/localeinfo.h: Add prototype for it.
	* time/strptime.c (get_alt_number): Use _nl_parse_alt_digit to get
	the value.  Correct computation of hour for %OI.  If no %EC given
	but %Ey use numeric formular.

	* dlfcn/Makefile (tststatic-ENV): Also add $(common-objpfx)elf for
	ld.so.
